ensure main content visible on tablets and larger

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,4 +181,9 @@ footer {
         display: flex;
         position: relative;
     }
+
+    /* Main Content */
+    main {
+        margin-top: 60px;
+    }
 }
